<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_my_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_uri" />

    <Button
        android:id="@+id/button_my_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_file" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image" />

    <Button
        android:id="@+id/button_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio" />

    <Button
        android:id="@+id/button_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video" />

</LinearLayout>